--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
- "name": "Wetube",
+ "name": "WeTube",
  "version": "0.1.0",
  "homepage": "https://mosefatullah.github.io/project5",
  "private": true,
