--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,6 @@
  ],
  "start_url": ".",
  "display": "standalone",
- "theme_color": "#0f0f0f",
- "background_color": "#0f0f0f"
+ "theme_color": "#0e1e25",
+ "background_color": "#0e1e25"
 }
