--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
  "short_name": "WeTube",
- "name": "WeTube - Video Sharing Platform",
+ "name": "WeTube",
  "icons": [
   {
    "src": "favicon.ico",
@@ -21,5 +21,5 @@
  "start_url": ".",
  "display": "standalone",
  "theme_color": "#0e1e25",
- "background_color": "#0e1e25"
+ "background_color": "#0f0f0f"
 }
