--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,9 @@
   },
   "author": "WeTube",
   "dependencies": {
+    "@firebase/app": "^0.9.15",
+    "@firebase/storage": "^0.11.2",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
