--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
  "name": "WeTube",
  "version": "0.1.0",
- "homepage": "https://mosefatullah.github.io/project5",
+ "homepage": "https://mosefatullah.github.io/wetube",
  "private": true,
  "dependencies": {
   "@testing-library/jest-dom": "^5.17.0",
