--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
  "homepage": "https://mosefatullah.github.io/wetube",
  "private": true,
  "dependencies": {
+  "@firebase/app": "^0.9.17",
+  "@firebase/database": "^1.0.1",
   "@testing-library/jest-dom": "^5.17.0",
   "@testing-library/react": "^13.4.0",
   "@testing-library/user-event": "^13.5.0",
