--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
  "private": true,
  "dependencies": {
   "@firebase/app": "^0.9.17",
+  "@firebase/auth": "^1.3.0",
   "@firebase/database": "^1.0.1",
   "@testing-library/jest-dom": "^5.17.0",
   "@testing-library/react": "^13.4.0",
