--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
  "name": "WeTube",
  "version": "0.1.0",
  "homepage": "https://mosefatullah.github.io/wetube",
- "private": true,
+ "private": false,
  "dependencies": {
   "@firebase/app": "^0.9.17",
   "@firebase/auth": "^1.3.0",
